ingresscontrol.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress-stable
  namespace: hello
spec:
  rules:
  - host: hello.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc-stable
          servicePort: 80
