ingresscontrolstage.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress-stage
  namespace: hello
spec:
  rules:
  - host: hellostage.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc-stage
          servicePort: 80
